almost done front - #12186

--- a/client/css/home.css.less
+++ b/client/css/home.css.less
@@ -1,3 +1,34 @@
+.home {
+  .container.page {
+    margin-top: 2em;
+    padding: 2em;
+  }
+
+  .jumbotron {
+    padding-top: 0;
+    padding-bottom: 1em;
+    margin-bottom: 0;
+
+    p {
+      font-size: 19px;
+      margin-bottom: 10px;
+    }
+
+    h1 {
+      font-size: 3em;
+    }
+
+    .or-block {
+      margin-top: 1em;
+      text-align: center;
+
+      .or {
+        font-weight: 400;
+        color: #888;
+      }
+    }
+  }
+}
 .sign-in-or-anon {
   .modal-body {
     .col-sm-6 {
