fix crazy imon data stuff - #12701

--- a/packages/access-index/client/widget.css.less
+++ b/packages/access-index/client/widget.css.less
@@ -42,6 +42,7 @@
     text-align: right;
     font-size: 1em;
     padding-right: 1em;
+    padding-left: 0.3em;
   }
   .score-title {
     margin-top: 0.5em;
