keep dashboard width consistent - #12729

--- a/client/templates/dashboards.html
+++ b/client/templates/dashboards.html
@@ -21,7 +21,7 @@
 </div>
 {{/if}}
 
-<div id="dashboard" class="gridster">
+<div id="dashboard" class="gridster" style="width: {{ width }}">
   <ul id="widgets">
     {{# each widgets }}
       {{> WidgetShow }}
