--- a/client/templates/head.html
+++ b/client/templates/head.html
@@ -3,6 +3,7 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="description" content="Internet Monitor Dashboard">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" href="/favicon.ico" />
   <title>Internet Monitor Dashboard</title>
 </head>
 
