do not break header onto two lines - #12768

--- a/client/css/header.css.less
+++ b/client/css/header.css.less
@@ -3,8 +3,16 @@ header {
 
   .navbar {
     box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
+    .logo-wrapper {
+      position: absolute;
+    }
+
     .navbar-brand {
-      padding: 5px 10px;
+      padding: 7px 10px;
+    }
+
+    .navbar-toggle {
+      background-color: white;
     }
 
     .navbar-right {
@@ -17,11 +25,11 @@ header {
     .logo-image {
       background: url("imon_logo_banner.png");
       display: inline-block;
-      height: 40px;
-      width: 383px;
+      height: 36px;
+      width: 346px;
 
       &:hover {
-        background-position: 0 -40px;
+        background-position: 0 -36px;
       }
     }
   }
