--- a/client/templates/header.html
+++ b/client/templates/header.html
@@ -3,11 +3,19 @@
     <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="/">
-            <span class="logo-image" title="Internet Monitor"></span>
-          </a>
+          <div class="logo-wrapper">
+            <a class="navbar-brand" href="/">
+              <span class="logo-image" title="Internet Monitor"></span>
+            </a>
+          </div>
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-right.navbar-collapse" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
         </div>
-        <div class="navbar-right">
+        <div class="navbar-right collapse navbar-collapse">
           {{# if onDashboard }}
           <a class="btn btn-warning navbar-btn" id="copy-dashboard"
              title="Make a new copy of this dashboard">
