do not show scrollbar on navs - #12768

--- a/client/css/header.css.less
+++ b/client/css/header.css.less
@@ -17,6 +17,7 @@ header {
 
     .navbar-right {
       padding-right: 10px;
+      overflow: hidden;
       a {
         margin-right: 5px;
       }
