--- a/packages/gsma-4g/client/widget.css
+++ b/packages/gsma-4g/client/widget.css
@@ -1,5 +1,12 @@
+.gsma-4g h2 {
+  white-space: nowrap;
+  width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .gsma-4g .no-data {
-  padding-top: 1.5em;
+  padding: 1em;
 }
 
 .gsma-4g .epoch.fourg-connections {
