--- a/packages/gsma-prepaid/client/widget.css
+++ b/packages/gsma-prepaid/client/widget.css
@@ -4,13 +4,38 @@ gsma-prepaid h2 {
   overflow: hidden;
   text-overflow: ellipsis;
 }
+.gsma-prepaid .current-data {
+  text-align: center;
+}
+.gsma-prepaid .current-prepaid {
+  display: inline-block;
+  vertical-align: top;
+  width: 50%;
+  margin-right: 1.5em;
+}
+.gsma-prepaid .current-value {
+  font-size: 4em;
+  line-height: 1em;
+}
+.gsma-prepaid .value-label {
+  font-size: 0.9em;
+}
+.gsma-prepaid .trend-line {
+  display: inline-block;
+  width: 30%;
+}
+.gsma-prepaid .trend-label {
+  font-size: 0.9em;
+}
 
 .gsma-prepaid .no-data {
   padding: 1em;
+  font-size: 14px;
 }
 
 .gsma-prepaid .epoch.prepaid-connections {
-  height: 60px;
+  height: 45px;
+  width: 100%;
 }
 
 .gsma-prepaid .epoch.prepaid-connections .line {
