--- a/packages/imon-scatter/client/lib/d3.compose.css
+++ b/packages/imon-scatter/client/lib/d3.compose.css
@@ -1,53 +1,21 @@
 /*!
  * d3.compose - Compose complex, data-driven visualizations from reusable charts and components with d3
- * v0.15.8 - https://github.com/CSNW/d3.compose - license: MIT
+ * v0.15.13 - https://github.com/CSNW/d3.compose - license: MIT
  */
-
 .chart-compose {
   font-size: 14px;
   background-color: #fff;
   border: solid 1px #ddd;
 }
 
-.chart-index-0 {
-  stroke: #1f77b4;
-  fill: #1f77b4;
-}
-
-.chart-index-1 {
-  stroke: #ff7f0e;
-  fill: #ff7f0e;
-}
-
-.chart-index-2 {
-  stroke: #2ca02c;
-  fill: #2ca02c;
-}
-
-.chart-index-3 {
-  stroke: #d62728;
-  fill: #d62728;
-}
-
-.chart-index-4 {
-  stroke: #9467bd;
-  fill: #9467bd;
-}
-
-.chart-index-5 {
-  stroke: #8c564b;
-  fill: #8c564b;
-}
-
-.chart-index-6 {
-  stroke: #e377c2;
-  fill: #e377c2;
-}
-
-.chart-index-7 {
-  stroke: #7f7f7f;
-  fill: #7f7f7f;
-}
+.chart-index-0 {stroke: #1f77b4; fill: #1f77b4;}
+.chart-index-1 {stroke: #ff7f0e; fill: #ff7f0e;}
+.chart-index-2 {stroke: #2ca02c; fill: #2ca02c;}
+.chart-index-3 {stroke: #d62728; fill: #d62728;}
+.chart-index-4 {stroke: #9467bd; fill: #9467bd;}
+.chart-index-5 {stroke: #8c564b; fill: #8c564b;}
+.chart-index-6 {stroke: #e377c2; fill: #e377c2;}
+.chart-index-7 {stroke: #7f7f7f; fill: #7f7f7f;}
 
 .chart-line {
   stroke-width: 1.5px;
@@ -64,7 +32,6 @@
   stroke: none;
   fill: black;
 }
-
 .chart-label-bg {
   opacity: 0.2;
   fill: white;
@@ -75,7 +42,6 @@
   font-size: 1.2em;
   font-weight: bold;
 }
-
 .chart-axis-title {
   font-size: 1.1em;
   font-weight: bold;
@@ -86,13 +52,10 @@
   stroke-width: 2px;
   stroke: black;
 }
-
 .chart-axis .tick {
   font-size: 0.9em;
 }
-
-.chart-axis .tick line,
-.chart-axis line.tick {
+.chart-axis .tick line, .chart-axis line.tick {
   stroke: black;
 }
 
