--- a/client/templates/sign_in_or_anon.html
+++ b/client/templates/sign_in_or_anon.html
@@ -1,9 +1,8 @@
 <template name="SignInOrAnon">
-<div class="text-center">
-  <button type="button" class="btn btn-success btn-lg" id="get-started">
-      Get Started
-  </button>
-</div>
+<button type="button" class="btn btn-success btn-lg" id="get-started">
+    Create a Dashboard
+</button>
+
 
 <div class="modal fade sign-in-or-anon" tabindex="-1" role="dialog">
   <div class="modal-dialog modal-lg">
