improve alignment and spacing on home page

--- a/client/css/home.css.less
+++ b/client/css/home.css.less
@@ -28,6 +28,16 @@
       }
     }
   }
+
+  @media (max-width: 1200px) {
+    .homepage-action, .homepage-description {
+      text-align: center;
+    }
+
+    .homepage-action {
+      padding-bottom: 1em;
+    }
+  }
 }
 .sign-in-or-anon {
   .modal-body {
