--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -1,11 +1,10 @@
 <template name="Home">
 <div class="container page">
   <div class="row">
-    <div class="col-lg-8" id="homepage-description">
+    <div class="col-lg-8 homepage-description">
       <p class="lead">The Internet Monitor dashboard helps you explore, create, and share data visualizations about the Internet.</p>
     </div>
-    <div class="col-lg-4 text-right" id="homepage-action">
-      <!-- need to fix alignment when wrapping on smaller screens -->
+    <div class="col-lg-4 text-right homepage-action">
         <a class="btn btn-primary btn-lg" href="//thenetmonitor.org/faq#dashboardfaq">
           How to Use
         </a>
