--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -20,28 +20,33 @@
   </div>
 
   <div class="row">
-    <div class="col-md-3 text-center">
-      <a href="/dashboards/33soXBmpQowadXFtR">
-        <img class="img-thumbnail" src="/dash_screenshot1.png" alt="Screenshot" />
-        <h2>Access and Infrastructure</h2>
-      </a>
-      <p>Explore global trends in Internet access and infrastructure over time.</p>
-    </div>
-    <div class="col-md-3 text-center">
-      <a href="/dashboards/snqBc9xQEwFaRnLF5">
-        <img class="img-thumbnail" src="/dash_screenshot2.png" alt="Screenshot" />
-        <h2>Country Comparison</h2>
-      </a>
-      <p>
-      See how four countries around the world compare on key Internet indicators.
-      </p>
-    </div>
-    <div class="col-md-3 text-center">
-      <a href="/dashboards/omB5dqPJEBtPcJ3Lp">
-        <img class="img-thumbnail" src="/dash_screenshot3.png" alt="Screenshot" />
-        <h2>Global Media</h2>
-      </a>
-      <p>Explore hot topics in online media in multiple languages.</p>
+    <div class="col-md-9 text-center">
+      <div class="col-md-4 text-center">
+        <div class="curated-board">
+          <a href="/dashboards/33soXBmpQowadXFtR">
+            <img class="img-thumbnail" src="/dash_screenshot1.png" alt="Screenshot" />
+            <h2 class="curated-title">Access and Infrastructure</h2>
+            <span class="curated-caption"><span>Explore global trends in Internet access and infrastructure over time.</span></span>
+          </a>
+        </div>
+        
+      </div>
+      <div class="col-md-4 text-center">
+        <a href="/dashboards/snqBc9xQEwFaRnLF5">
+          <img class="img-thumbnail" src="/dash_screenshot2.png" alt="Screenshot" />
+          <h2>Country Comparison</h2>
+        </a>
+        <p>
+        See how four countries around the world compare on key Internet indicators.
+        </p>
+      </div>
+      <div class="col-md-4 text-center">
+        <a href="/dashboards/omB5dqPJEBtPcJ3Lp">
+          <img class="img-thumbnail" src="/dash_screenshot3.png" alt="Screenshot" />
+          <h2>Global Media</h2>
+        </a>
+        <p>Explore hot topics in online media in multiple languages.</p>
+      </div>
     </div>
     <div class="col-md-3 text-center">
       <a href="/dashboards/omB5dqPJEBtPcJ3Lp">
