--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -21,39 +21,54 @@
 
   <div class="row">
     <div class="col-md-9 text-center">
+      <h2>Explore curated boards</h2>
       <div class="col-md-4 text-center">
         <div class="curated-board">
+        <!-- improve columns? -->
           <a href="/dashboards/33soXBmpQowadXFtR">
             <img class="img-thumbnail" src="/dash_screenshot1.png" alt="Screenshot" />
             <h2 class="curated-title">Access and Infrastructure</h2>
-            <span class="curated-caption"><span>Explore global trends in Internet access and infrastructure over time.</span></span>
+            <span class="curated-caption">
+              <span>Explore global trends in Internet access and infrastructure over time.</span>
+            </span>
           </a>
         </div>
         
       </div>
       <div class="col-md-4 text-center">
-        <a href="/dashboards/snqBc9xQEwFaRnLF5">
-          <img class="img-thumbnail" src="/dash_screenshot2.png" alt="Screenshot" />
-          <h2>Country Comparison</h2>
-        </a>
-        <p>
-        See how four countries around the world compare on key Internet indicators.
-        </p>
+        <div class="curated-board">
+          <a href="/dashboards/snqBc9xQEwFaRnLF5">
+            <img class="img-thumbnail" src="/dash_screenshot2.png" alt="Screenshot" />
+            <h2 class="curated-title">Country Comparison</h2>
+            <span class="curated-caption">
+              <span>See how four countries around the world compare on key Internet indicators.</span>
+            </span>
+          </a>
+        </div>
       </div>
       <div class="col-md-4 text-center">
-        <a href="/dashboards/omB5dqPJEBtPcJ3Lp">
-          <img class="img-thumbnail" src="/dash_screenshot3.png" alt="Screenshot" />
-          <h2>Global Media</h2>
-        </a>
-        <p>Explore hot topics in online media in multiple languages.</p>
+        <div class="curated-board">
+          <a href="/dashboards/omB5dqPJEBtPcJ3Lp">
+            <img class="img-thumbnail" src="/dash_screenshot3.png" alt="Screenshot" />
+            <h2 class="curated-title">Global Media</h2>
+            <span class="curated-caption">
+              <span>Explore hot topics in online media in multiple languages.</span>
+            </span>
+          </a>
+        </div>
       </div>
     </div>
     <div class="col-md-3 text-center">
-      <a href="/dashboards/omB5dqPJEBtPcJ3Lp">
-        <img class="img-thumbnail" src="/dash_screenshot3.png" alt="Screenshot" />
-        <h2>New Dashboard!</h2>
-      </a>
-      <p>New dashboard.</p>
+      <h2>Use a template</h2>
+      <div class="curated-board">
+        <a href="/dashboards/omB5dqPJEBtPcJ3Lp">
+          <img class="img-thumbnail" src="/dash_screenshot3.png" alt="Screenshot" />
+          <h2 class="curated-title">New Dashboard!</h2>
+          <span class="curated-caption">
+            <span>New dashboard.</span>
+          </span>
+        </a>
+      </div>
     </div>
   </div>
 </div>
