--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -20,11 +20,10 @@
   </div>
 
   <div class="row">
-    <div class="col-md-9 text-center">
+    <div class="col-md-9 text-center curated-set">
       <h2>Explore curated boards</h2>
-      <div class="col-md-4 text-center">
+      <div class="col-sm-6 col-md-4">
         <div class="curated-board">
-        <!-- improve columns? -->
           <a href="/dashboards/33soXBmpQowadXFtR">
             <img class="img-thumbnail" src="/dash_screenshot1.png" alt="Screenshot" />
             <h2 class="curated-title">Access and Infrastructure</h2>
@@ -33,9 +32,8 @@
             </span>
           </a>
         </div>
-        
       </div>
-      <div class="col-md-4 text-center">
+      <div class="col-sm-6 col-md-4">
         <div class="curated-board">
           <a href="/dashboards/snqBc9xQEwFaRnLF5">
             <img class="img-thumbnail" src="/dash_screenshot2.png" alt="Screenshot" />
@@ -46,7 +44,40 @@
           </a>
         </div>
       </div>
-      <div class="col-md-4 text-center">
+      <div class="col-sm-6 col-md-4">
+        <div class="curated-board">
+          <a href="/dashboards/omB5dqPJEBtPcJ3Lp">
+            <img class="img-thumbnail" src="/dash_screenshot3.png" alt="Screenshot" />
+            <h2 class="curated-title">Global Media</h2>
+            <span class="curated-caption">
+              <span>Explore hot topics in online media in multiple languages.</span>
+            </span>
+          </a>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-4">
+        <div class="curated-board">
+          <a href="/dashboards/omB5dqPJEBtPcJ3Lp">
+            <img class="img-thumbnail" src="/dash_screenshot3.png" alt="Screenshot" />
+            <h2 class="curated-title">Global Media</h2>
+            <span class="curated-caption">
+              <span>Explore hot topics in online media in multiple languages.</span>
+            </span>
+          </a>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-4">
+        <div class="curated-board">
+          <a href="/dashboards/omB5dqPJEBtPcJ3Lp">
+            <img class="img-thumbnail" src="/dash_screenshot3.png" alt="Screenshot" />
+            <h2 class="curated-title">Global Media</h2>
+            <span class="curated-caption">
+              <span>Explore hot topics in online media in multiple languages.</span>
+            </span>
+          </a>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-4">
         <div class="curated-board">
           <a href="/dashboards/omB5dqPJEBtPcJ3Lp">
             <img class="img-thumbnail" src="/dash_screenshot3.png" alt="Screenshot" />
@@ -58,19 +89,35 @@
         </div>
       </div>
     </div>
-    <div class="col-md-3 text-center">
+
+    <div class="col-md-3 text-center template-set">
       <h2>Use a template</h2>
-      <div class="curated-board">
-        <a href="/dashboards/omB5dqPJEBtPcJ3Lp">
-          <img class="img-thumbnail" src="/dash_screenshot3.png" alt="Screenshot" />
-          <h2 class="curated-title">New Dashboard!</h2>
-          <span class="curated-caption">
-            <span>New dashboard.</span>
-          </span>
-        </a>
+      <div class="col-sm-6 col-md-12">
+        <div class="curated-board">
+          <a href="/dashboards/omB5dqPJEBtPcJ3Lp">
+            <img class="img-thumbnail" src="/dash_screenshot3.png" alt="Screenshot" />
+            <h2 class="curated-title">New Dashboard!</h2>
+            <span class="curated-caption template-caption">
+              <span>New dashboard.</span>
+            </span>
+          </a>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-12">
+        <div class="curated-board">
+          <a href="/dashboards/omB5dqPJEBtPcJ3Lp">
+            <img class="img-thumbnail" src="/dash_screenshot3.png" alt="Screenshot" />
+            <h2 class="curated-title">New Dashboard!</h2>
+            <span class="curated-caption template-caption">
+              <span>New dashboard.</span>
+            </span>
+          </a>
+        </div>
       </div>
     </div>
+
   </div>
+
 </div>
 
 </template>
