--- a/client/css/home.css.less
+++ b/client/css/home.css.less
@@ -50,13 +50,13 @@
   }
 
   .curated-title {
-    background: rgba(0,0,0,0.3);
+    background: rgba(40,96,144,0.7);
     color: white;
     position: absolute;
     top: 0;
     left: 0;
     margin: 0;
-    padding: 20px 10px;
+    padding: 0.5em;
     height: 100%;
     width: 100%;
     -webkit-transition: opacity 500ms;
@@ -65,12 +65,16 @@
     transition: opacity 500ms;
   }
 
+  .curated-title.template-title {
+    background: rgba(68,157,68,0.8);
+  }
+
   .curated-board a:hover h2.curated-title {
     opacity: 0;
   }
 
   .curated-caption {
-    background: rgba(40,96,144,0.5);
+    background: rgba(0,0,0,0.7);
     color: white;
     text-align: left;
     position: absolute;
@@ -85,10 +89,6 @@
     -moz-transition: opacity 500ms;
     -o-transition: opacity 500ms;
     transition: opacity 500ms;
-  }
-
-  .curated-caption.template-caption {
-    background: rgba(68,157,68,0.5);
   }
 
   .curated-caption span {
