--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -24,22 +24,55 @@
       <h2>Explore curated boards</h2>
       <div class="col-sm-6 col-md-4">
         <div class="curated-board">
-          <a href="/dashboards/33soXBmpQowadXFtR">
-            <img class="img-thumbnail" src="/dash_screenshot1.png" alt="Screenshot" />
-            <h2 class="curated-title">Access and Infrastructure</h2>
+          <a href="/dashboards/PGb7iKt2FacvJ3M8R">
+            <img class="img-thumbnail" src="/dash_screenshot4.png" alt="Screenshot" />
+            <h2 class="curated-title">Affordability</h2>
             <span class="curated-caption">
-              <span>Explore global trends in Internet access and infrastructure over time.</span>
+              <span>Countries with more affordable broadband tend to have higher Internet adoption.</span>
             </span>
           </a>
         </div>
       </div>
       <div class="col-sm-6 col-md-4">
         <div class="curated-board">
-          <a href="/dashboards/snqBc9xQEwFaRnLF5">
-            <img class="img-thumbnail" src="/dash_screenshot2.png" alt="Screenshot" />
-            <h2 class="curated-title">Country Comparison</h2>
+          <a href="/dashboards/kSxoNkTkP3nuH89nK">
+            <img class="img-thumbnail" src="/dash_screenshot5.png" alt="Screenshot" />
+            <h2 class="curated-title">Internet Use & Income</h2>
             <span class="curated-caption">
-              <span>See how four countries around the world compare on key Internet indicators.</span>
+              <span>Connectivity trends track economic development, suggesting that we haven’t yet found effective ways to leapfrog.</span>
+            </span>
+          </a>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-4">
+        <div class="curated-board">
+          <a href="/dashboards/diZeYbDgpobKiEzAg">
+            <img class="img-thumbnail" src="/dash_screenshot6.png" alt="Screenshot" />
+            <h2 class="curated-title">Internet Use & Literacy</h2>
+            <span class="curated-caption">
+              <span>Egypt, Tunisia, Morocco, Nigeria, and Kenya all have Internet penetration rates that exceed their ‘expected’ rate when looking at literacy rates.</span>
+            </span>
+          </a>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-4">
+        <div class="curated-board">
+          <a href="/dashboards/zJnxH76ApTAGZb3Z6">
+            <img class="img-thumbnail" src="/dash_screenshot7.png" alt="Screenshot" />
+            <h2 class="curated-title">Alternative Trajectories</h2>
+            <span class="curated-caption">
+              <span>High-performing countries do well on both wireline and mobile broadband adoption. Others are on a different, mobile-led trajectory.</span>
+            </span>
+          </a>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-4">
+        <div class="curated-board">
+          <a href="dashboards/Kny2AjC52KwBrepz3">
+            <img class="img-thumbnail" src="/dash_screenshot8.png" alt="Screenshot" />
+            <h2 class="curated-title">Mobile-Driven Change</h2>
+            <span class="curated-caption">
+              <span>EThe revolutions in Bahrain, Egypt, Syria, and Tunisia were facilitated by prepaid 2G/3G mobile connections and didn’t require high-speed wireline connectivity with broad penetration.</span>
             </span>
           </a>
         </div>
@@ -50,44 +83,12 @@
             <img class="img-thumbnail" src="/dash_screenshot3.png" alt="Screenshot" />
             <h2 class="curated-title">Global Media</h2>
             <span class="curated-caption">
-              <span>Explore hot topics in online media in multiple languages.</span>
+              <span>Explore this week's hot topics in online media around the globe, in multiple languages.</span>
             </span>
           </a>
         </div>
       </div>
-      <div class="col-sm-6 col-md-4">
-        <div class="curated-board">
-          <a href="/dashboards/omB5dqPJEBtPcJ3Lp">
-            <img class="img-thumbnail" src="/dash_screenshot3.png" alt="Screenshot" />
-            <h2 class="curated-title">Global Media</h2>
-            <span class="curated-caption">
-              <span>Explore hot topics in online media in multiple languages.</span>
-            </span>
-          </a>
-        </div>
-      </div>
-      <div class="col-sm-6 col-md-4">
-        <div class="curated-board">
-          <a href="/dashboards/omB5dqPJEBtPcJ3Lp">
-            <img class="img-thumbnail" src="/dash_screenshot3.png" alt="Screenshot" />
-            <h2 class="curated-title">Global Media</h2>
-            <span class="curated-caption">
-              <span>Explore hot topics in online media in multiple languages.</span>
-            </span>
-          </a>
-        </div>
-      </div>
-      <div class="col-sm-6 col-md-4">
-        <div class="curated-board">
-          <a href="/dashboards/omB5dqPJEBtPcJ3Lp">
-            <img class="img-thumbnail" src="/dash_screenshot3.png" alt="Screenshot" />
-            <h2 class="curated-title">Global Media</h2>
-            <span class="curated-caption">
-              <span>Explore hot topics in online media in multiple languages.</span>
-            </span>
-          </a>
-        </div>
-      </div>
+      <p class="lead"><a href="">See all curated boards &raquo;</a></p>
     </div>
 
     <div class="col-md-3 text-center template-set">
@@ -95,10 +96,10 @@
       <div class="col-sm-6 col-md-12">
         <div class="curated-board">
           <a href="/dashboards/omB5dqPJEBtPcJ3Lp">
-            <img class="img-thumbnail" src="/dash_screenshot3.png" alt="Screenshot" />
-            <h2 class="curated-title">New Dashboard!</h2>
-            <span class="curated-caption template-caption">
-              <span>New dashboard.</span>
+            <img class="img-thumbnail" src="/template_screenshot1.png" alt="Screenshot" />
+            <h2 class="curated-title template-title">Country Background Template</h2>
+            <span class="curated-caption">
+              <span>Use this template to create a quick dashboard about a single country's Internet environment.</span>
             </span>
           </a>
         </div>
@@ -106,14 +107,15 @@
       <div class="col-sm-6 col-md-12">
         <div class="curated-board">
           <a href="/dashboards/omB5dqPJEBtPcJ3Lp">
-            <img class="img-thumbnail" src="/dash_screenshot3.png" alt="Screenshot" />
-            <h2 class="curated-title">New Dashboard!</h2>
-            <span class="curated-caption template-caption">
-              <span>New dashboard.</span>
+            <img class="img-thumbnail" src="/template_screenshot2.png" alt="Screenshot" />
+            <h2 class="curated-title template-title">Country Comparison Template</h2>
+            <span class="curated-caption">
+              <span>Use this template to create a quick dashboard comparing two or more countries' Internet environments.</span>
             </span>
           </a>
         </div>
       </div>
+      <p class="lead"><a href="">Template FAQ &raquo;</a></p>
     </div>
 
   </div>
