--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -72,7 +72,7 @@
             <img class="img-thumbnail" src="/dash_screenshot8.png" alt="Screenshot" />
             <h2 class="curated-title">Mobile-Driven Change</h2>
             <span class="curated-caption">
-              <span>EThe revolutions in Bahrain, Egypt, Syria, and Tunisia were facilitated by prepaid 2G/3G mobile connections and didn’t require high-speed wireline connectivity with broad penetration.</span>
+              <span>The revolutions in Bahrain, Egypt, Syria, and Tunisia were facilitated by prepaid 2G/3G mobile connections and didn’t require high-speed wireline connectivity with broad penetration.</span>
             </span>
           </a>
         </div>
