update links to platform site and finalize styling

--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -5,7 +5,7 @@
       <p class="lead">The Internet Monitor dashboard helps you explore, create, and share data visualizations about the Internet.</p>
     </div>
     <div class="col-lg-4 text-right homepage-action">
-        <a class="btn btn-primary btn-lg" href="//thenetmonitor.org/faq#dashboardfaq">
+        <a class="btn btn-primary btn-lg" href="//thenetmonitor.org/faq">
           How to Use
         </a>
 
@@ -88,14 +88,15 @@
           </a>
         </div>
       </div>
-      <p class="lead"><a href="">See all curated boards &raquo;</a></p>
+      <p class="lead"><a href="//thenetmonitor.org/curated-dashboards">See all curated boards &raquo;</a></p>
     </div>
 
     <div class="col-md-3 text-center template-set">
       <h2>Use a template</h2>
       <div class="col-sm-6 col-md-12">
         <div class="curated-board">
-          <a href="/dashboards/omB5dqPJEBtPcJ3Lp">
+          <a id="template-background" title="Copy this template">
+          {{! clicking this link would ideally clone this dashboard on prod: RoEW2jMzxow6GygQg }}
             <img class="img-thumbnail" src="/template_screenshot1.png" alt="Screenshot" />
             <h2 class="curated-title template-title">Country Background Template</h2>
             <span class="curated-caption">
@@ -106,7 +107,8 @@
       </div>
       <div class="col-sm-6 col-md-12">
         <div class="curated-board">
-          <a href="/dashboards/omB5dqPJEBtPcJ3Lp">
+          <a id="template-comparison" title="Copy this template">
+          {{! clicking this link would ideally clone this dashboard on prod: YZYHSsP2Y3r82Weeh }}
             <img class="img-thumbnail" src="/template_screenshot2.png" alt="Screenshot" />
             <h2 class="curated-title template-title">Country Comparison Template</h2>
             <span class="curated-caption">
@@ -115,7 +117,7 @@
           </a>
         </div>
       </div>
-      <p class="lead"><a href="">Template FAQ &raquo;</a></p>
+      <p class="lead"><a href="//thenetmonitor.org/faq/using-a-dashboard-template">Template FAQ &raquo;</a></p>
     </div>
 
   </div>
