add rdr and fix language

--- a/packages/ranking-digital-rights/client/widget.css
+++ b/packages/ranking-digital-rights/client/widget.css
@@ -1,5 +1,8 @@
 .ranking-digital-rights h1 {
-  font-size: 2.2em;
+  font-size: 1.5em;
+}
+.ranking-digital-rights h2 {
+  font-size: 1.3em;
 }
 .ranking-digital-rights th.not-sorted {
   color: #999;
