fix alignment on sign up or sign in

--- a/client/templates/sign_in_or_anon.html
+++ b/client/templates/sign_in_or_anon.html
@@ -4,7 +4,7 @@
 </button>
 
 
-<div class="modal fade sign-in-or-anon" tabindex="-1" role="dialog">
+<div class="modal fade sign-in-or-anon text-left" tabindex="-1" role="dialog">
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header">
