fail at cloning boards from homepage

--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -97,6 +97,7 @@
         <div class="curated-board">
           <a id="template-background" title="Copy this template">
           {{! clicking this link would ideally clone this dashboard on prod: RoEW2jMzxow6GygQg }}
+          {{! for testing: clone YdpnELWZEwR6iJsLu }}
             <img class="img-thumbnail" src="/template_screenshot1.png" alt="Screenshot" />
             <h2 class="curated-title template-title">Country Background Template</h2>
             <span class="curated-caption">
