--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -2,7 +2,15 @@
 <div class="container page">
   <div class="row">
     <div class="col-lg-8 homepage-description">
-      <p class="lead">The Internet Monitor dashboard helps you explore, create, and share data visualizations about the Internet.</p>
+      <div class="panel panel-default">
+        <div class="panel-body">
+          <p class="lead">
+            The <strong>Internet Monitor</strong> dashboard helps you
+            <em>explore</em>, <em>create</em>, and <em>share</em> data
+            visualizations about the Internet.
+          </p>
+        </div>
+      </div>
     </div>
     <div class="col-lg-4 text-right homepage-action">
         <a class="btn btn-primary btn-lg" href="//thenetmonitor.org/faq">
