--- a/packages/imon-scatter/client/widget.css
+++ b/packages/imon-scatter/client/widget.css
@@ -6,10 +6,18 @@
   pointer-events: none;
   display: none;
 }
+.imon-scatter .chart-label-bg {
+  opacity: 0.5;
+}
 .imon-scatter .chart-labels .chart-label.visible-label {
   display: initial;
 }
 
 .imon-scatter .chart-dots circle {
   stroke-width: 0;
+}
+
+.imon-scatter .chart-dots circle.selected {
+  fill: #FF6A00 !important;
+  opacity: 1 !important;
 }
