fix template links

--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -103,9 +103,7 @@
       <h2>Use a template</h2>
       <div class="col-sm-6 col-md-12">
         <div class="curated-board">
-          <a id="template-background" title="Copy this template">
-          {{! clicking this link would ideally clone this dashboard on prod: RoEW2jMzxow6GygQg }}
-          {{! for testing: clone YdpnELWZEwR6iJsLu }}
+          <a id="template-background" title="Copy this template" href="/dashboards/RoEW2jMzxow6GygQg">
             <img class="img-thumbnail" src="/template_screenshot1.png" alt="Screenshot" />
             <h2 class="curated-title template-title">Country Background Template</h2>
             <span class="curated-caption">
@@ -116,8 +114,7 @@
       </div>
       <div class="col-sm-6 col-md-12">
         <div class="curated-board">
-          <a id="template-comparison" title="Copy this template">
-          {{! clicking this link would ideally clone this dashboard on prod: YZYHSsP2Y3r82Weeh }}
+          <a id="template-comparison" title="Copy this template" href="dashboards/YZYHSsP2Y3r82Weeh">
             <img class="img-thumbnail" src="/template_screenshot2.png" alt="Screenshot" />
             <h2 class="curated-title template-title">Country Comparison Template</h2>
             <span class="curated-caption">
